prevent table from stretching too wide

--- a/src/components/Table/tableStyles.scss
+++ b/src/components/Table/tableStyles.scss
@@ -39,3 +39,7 @@
   min-width: 200px;
   max-width: 200px;
 }
+
+.tableContainer{
+  width: fit-content;
+}
